# noctalia-qs

./: CMakeLists.txt  README.md  default.nix  flake.nix
src/: CMakeLists.txt
src/core/: desktopentry.cpp  desktopentry.hpp  scriptmodel.cpp
src/launch/: main.cpp
src/network/nm/: backend.cpp
src/services/pipewire/: peak.cpp  spectrum.cpp  spectrum.hpp
src/services/upower/: powerprofiles.cpp
src/wayland/: CMakeLists.txt  init.cpp  safe_dispatch.cpp  safe_dispatch.hpp
src/wayland/background_effect/: qml.cpp  qml.hpp
src/wayland/dwl/: CMakeLists.txt  manager.cpp  manager.hpp  module.md  output.cpp  output.hpp  proto.cpp  proto.hpp  qml.hpp  tag.cpp  tag.hpp
src/wayland/windowmanager/: CMakeLists.txt  ext_workspace.cpp  workspace.cpp
src/wayland/wlr_layershell/: CMakeLists.txt  surface.cpp
src/window/: proxywindow.hpp
src/windowmanager/: windowmanager.cpp  workspace.hpp
src/x11/i3/: CMakeLists.txt
